2011-12-16 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* First version