@@ -1,2 +1,5 @@
+2011-12-19 CERDAN Yohann  <cerdanyohann@yahoo.fr>
+	* Fix a bug with multivalued fields
+	* Save the field to display in page browser
 2011-12-16 CERDAN Yohann  <cerdanyohann@yahoo.fr>
 	* First version
